3.mongo-app/mongoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  type: ClusterIP
  selector:
    app: mongo-express  
  ports:
    - port: 80
      targetPort: 8081
