3.mongo-app/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mongo-app.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 80
